Fix share button icon alignment

--- a/scss/components/_jwButtons.scss
+++ b/scss/components/_jwButtons.scss
@@ -198,13 +198,17 @@
         }
     }
 
-    .jwy-icon-stack .jwy-icon {
-        @include transform(translate(-50%, -50%));
-        top: 50%;
-        left: 50%;
+    .jwy-icon-stack {
+        display: inline-block;
 
-        color: $main-color;
-        font-size: 0.7em;
+        .jwy-icon {
+            @include transform(translate(-50%, -50%));
+            top: 50%;
+            left: 50%;
+
+            color: $main-color;
+            font-size: 0.7em;
+        }
     }
 }
 
